[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
blockchaintree = { git = "https://github.com/AploCoin/BlockChainTree", branch = "main" }
txpool = { git = "https://github.com/AploCoin/TxPool.git", branch = "main" }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
quinn = "0.11.0"
serde = { version = "1.0.202", features = ["derive"] }
rmp-serde = "1.3.0"
serde_bytes = "0.11.14"
rmpv = { version = "1.3.0", features = ["serde", "serde_bytes", "with-serde"] }
thiserror = "1.0.61"
serde_json = "1.0.117"
clap = { version = "4.5.4", features = ["derive"] }
