[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
blockchaintree = { git = "https://github.com/AploCoin/BlockChainTree", branch = "main" }
txpool = { git = "https://github.com/AploCoin/TxPool.git", branch = "main" }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
serde = { version = "1.0.202", features = ["derive"] }
rmp-serde = "1.3.0"
serde_bytes = "0.11.14"
rmpv = { version = "1.3.0", features = ["serde", "serde_bytes", "with-serde"] }
thiserror = "1.0.61"
serde_json = "1.0.117"
clap = { version = "4.5.4", features = ["derive"] }
parking_lot = "0.12.3"
serde_repr = "0.1.19"
tokio-util = { version = "0.7.11", features = ["codec", "net"] }
futures = "0.3.30"
reth-discv4 = {git="https://github.com/paradigmxyz/reth.git", tag="v1.0.3"}
eyre = "0.6.12"
secp256k1 = "0.29.0"
once_cell = "1.19.0"
alloy-primitives = "0.7.7"
lazy_static = "1.5.0"
