[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
rmp-serde = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
x25519-dalek = "2.0.1"
chacha20 = "0.9.1"
zstd = "0.13.2"
thiserror = ">=1.0.32"
rand_core = "0.6.4"
getrandom = "0.2"
lazy_static = ">=1.4"
rand = ">=0.8.5"
serde_json = ">=1"
dotenvy = ">=0.15.0"
